<resources>
    <string name="app_name">REDRAGON APP</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">phone</string>
    <string name="register_now">Register Now</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="gmail">gmail</string>
</resources>